--- a/index.html
+++ b/index.html
@@ -240,6 +240,22 @@
                         <small>Add your TikTok embed code</small>
                     </div>
                 </div>
+
+                <div class="video-card">
+                    <div class="video-placeholder">
+                        <p>🎥</p>
+                        <p>TikTok Video 5</p>
+                        <small>Add your TikTok embed code</small>
+                    </div>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-placeholder">
+                        <p>🎥</p>
+                        <p>TikTok Video 6</p>
+                        <small>Add your TikTok embed code</small>
+                    </div>
+                </div>
             </div>
             
             <div class="social-cta">
