--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
                 <!-- Replace with your actual TikTok embed codes -->
                 <div class="video-card">
                     <div class="video-placeholder">
-                        <p>🎥</p>
-                        <p>TikTok Video 1</p>
-                        <small>Add your TikTok embed code</small>
+                        <p>Pull Ups</p>
+                        <p>When you lift your feelings instead of weights.</p>
+                        <small><blockquote class="tiktok-embed" cite="https://www.tiktok.com/@pawpump/video/7572146655751933191" data-video-id="7572146655751933191" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@pawpump" href="https://www.tiktok.com/@pawpump?refer=embed">@pawpump</a> When you lift your feelings instead of weights. <a title="funnyvideos" target="_blank" href="https://www.tiktok.com/tag/funnyvideos?refer=embed">#funnyvideos</a> <a title="fyp" target="_blank" href="https://www.tiktok.com/tag/fyp?refer=embed">#fyp</a> <a title="catsoftiktok" target="_blank" href="https://www.tiktok.com/tag/catsoftiktok?refer=embed">#catsoftiktok</a> <a title="viral" target="_blank" href="https://www.tiktok.com/tag/viral?refer=embed">#viral</a> <a title="meme" target="_blank" href="https://www.tiktok.com/tag/meme?refer=embed">#meme</a> <a target="_blank" title="♬ original sound - pawpump" href="https://www.tiktok.com/music/original-sound-7572146687469898504?refer=embed">♬ original sound - pawpump</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script></small>
                     </div>
                 </div>
                 
