--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <li><a href="#gallery">Gallery</a></li>
             </ul>
             <a href="https://pump.fun/coin/DYC9KaWTCdoxZGVD1NwRqpgv5tKa73PQx7JapV4Kpump" class="btn-buy-nav">Buy Now</a>
+            <button class="mobile-menu-btn" aria-label="Toggle menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </div>
     </nav>
 
